--- a/mini3216/MINI3216说明书.md
+++ b/mini3216/MINI3216说明书.md
@@ -243,7 +243,7 @@
 ![](image47.jpg)
 
 按 ***[Left/Sub]*** 和 ***[Right/Add]*** 键可调整点报时设置,只能在 ***[Y-N]*** 之间调整.本机默认模式为Y,即开启整点报时.
-继续按 ***[Enter/Down]*** 键进入系统静音设置界面.
+继续按 ***[Enter/Down]*** 键进入闹钟开关设置界面.
 
 ### 闹钟开关设置
 
